--- a/app/src/main/res/layout/activity_perfil2.xml
+++ b/app/src/main/res/layout/activity_perfil2.xml
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtnumcontrolA" />
 
     <ImageButton
-        android:id="@+id/btnH0me"
+        android:id="@+id/btnHomea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="124dp"
